# RemoteWindowControl

./: CMakeLists.txt  README.md  main_client.cpp  main_server.cpp  res.qrc
src/base/: imageprovider.cpp  imageprovider.h  remoteevent.h  systemapi.cpp  systemapi.h
src/base/tcp/: controlled.cpp  controlled.h  controller.cpp  controller.h  protocol.cpp  protocol.h  socket.cpp  socket.h
src/windows/: client_mainwindow.cpp  client_mainwindow.h  server_mainwindow.cpp  server_mainwindow.h
